tests/errors/array-out-of-bounds.ja
procedure main()
    int x[1]
    x[10] ^= 1
